Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1806

DOM_Document::createElement() crashed instead to throw exection when called with an empty string because of XMLChar1_0::isValidName()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.5.0
    • 3.1.0
    • Utilities
    • None
    • Sun Solaris 2.8

    Description

      Hi all
      I'm trying to "migrate" some old C++ Code from Xerces 1.7.0 to Xerces 2.5.0 using the includes from the directory /dom/deprecated instead of using the new classes.

      Now the method DOM_Document::createElement() crashes (core dump) when called with an empty string instead to throw an execption because of XMLChar1_0::isValidName(), on Xerces 1.7.0 it didn't crash.

      IIt's definitely a regression.

      Regards
      Sandro Piras

      Attachments

        1. xercestest.cpp
          4 kB
          Sandro Piras

        Activity

          People

            dbertoni David N Bertoni
            s.piras Sandro Piras
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: