Fix for XERCESC-1806.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@676799 13f79535-47bb-0310-9956-ffa450edef68